Adapt server to keystead-core 0.4.4: personal vaults, vault access
Replace the legacy device/collaboration/recovery/automation model with
the core 0.4.4 model:

- Add PersonalVault record stream (record/PersonalVault*) with
  VaultRecordEvent* for sync and full backup.
- Add vaultaccess package for ephemeral vault access requests.
- Add Flyway migrations V26 (vault access requests), V27 (ephemeral
  vault access), V28 (personal vault record stream), V29 (drop legacy
  device and collaboration tables).
- Delete automation/, recovery/, collaborative vault/ (members, key
  packages, rotation), EncryptedRecord*, and device identity /
  challenge / sync-cursor classes along with their tests.
- Update audit, auth, and security (Bearer filter, AccessTokenService)
  to the new model.
- Fix UserRegistrationHttpIntegrationTest: keep the 400 assertion via a
  sub-minimum password (the 72-char upper bound went away with the
  bcrypt pre-hash) and cover that over-72-byte passwords are accepted.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>